--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!--<script type="text/javascript" src="path/to/dist/vue-awesome-swiper.js"></script>-->
 
     <script type="text/javascript"  src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
   </head>
   <body style="background-color: #F7F5F4;">
     <div id="app"></div>
