--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <script type="text/javascript"  src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
+    <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.js"></script>
   </head>
   <body style="background-color: #F7F5F4;">
     <div id="app"></div>
