--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="/static/images/icon.png" type="image/gif" />
     <title>孙康的个人博客</title>
     <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
-    <script type="text/javascript" src="https://cdn.bootcss.com/vue/2.4.4/vue.js"></script>
-    <script type="text/javascript" src="https://cdn.bootcss.com/vue-router/2.7.0/vue-router.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/vue/2.5.17-beta.0/vue.min.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/vue-router/3.0.1/vue-router.min.js"></script>
     <script type="text/javascript" src="http://cdn.staticfile.org/iview/3.0.1-rc.1/iview.min.js"></script>
     <script type="text/javascript" src="http://cdn.staticfile.org/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript" src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
@@ -22,6 +22,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
     <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.js"></script>
+
+    <link rel="stylesheet" href="static/css/animation.css"/>
   </head>
   <body style="background-color: #F7F5F4;">
     <div id="app"></div>
