--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <link rel="shortcut icon" href="/static/images/icon.png" />
     <link rel="icon" href="/static/images/icon.png" type="image/gif" />
     <title>孙康的个人博客</title>
-    <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/iview/3.0.1-rc.1/styles/iview.css">
     <script type="text/javascript" src="https://cdn.staticfile.org/vue/2.5.17-beta.0/vue.min.js"></script>
     <script type="text/javascript" src="https://cdn.staticfile.org/vue-router/3.0.1/vue-router.min.js"></script>
     <script type="text/javascript" src="http://cdn.staticfile.org/iview/3.0.1-rc.1/iview.min.js"></script>
     <script type="text/javascript" src="http://cdn.staticfile.org/jquery/3.3.1/jquery.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/vue-lazyload/1.2.6/vue-lazyload.js"></script>
 
     <link rel="stylesheet" href="http://cdn.staticfile.org/Swiper/4.4.1/css/swiper.min.css"/>
     <script type="text/javascript" src="http://cdn.staticfile.org/Swiper/4.4.1/js/swiper.min.js"></script>
     <!--<script type="text/javascript" src="path/to/dist/vue-awesome-swiper.js"></script>-->
 
-    <script type="text/javascript"  src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript"  src="https://cdn.staticfile.org/axios/0.19.0-beta.1/axios.min.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
-    <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.js"></script>
+    <script src="https://cdn.staticfile.org/vuex/3.0.1/vuex.min.js"></script>
 
     <link rel="stylesheet" href="static/css/animation.css"/>
+
+    <script src="https://cdn.staticfile.org/echarts/4.2.0-rc.2/echarts.min.js"></script>
+
   </head>
   <body style="background-color: #F7F5F4;">
     <div id="app"></div>
